# otter-docs

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: codenet_eval.py  otter-docs.repos.toml
src/otter_docs/: __init__.py  bench.py  cli.py  describe.py  discovery.py  embedcache.py  enrich.py  eval.py  eval_codenet.py  eval_data.py  findings.py  hooks.py  llm_direct.py  mcp.py  models.py  onboarding.py  repo.py
src/otter_docs/agent/: __init__.py  harness.py  prompts.py  schemas.py  tools.py
src/otter_docs/backends/: __init__.py  base.py  neo4j.py  sqlite.py
src/otter_docs/clients/: __init__.py  base.py  fake.py  ollama.py  openai_compat.py
src/otter_docs/data/: clone_pairs.jsonl
src/otter_docs/detectors/: __init__.py  base.py  dead_code.py  description_divergence.py  empty_module.py  large_function.py  semantic_equivalence.py
src/otter_docs/parsers/: __init__.py  base.py  go.py  python.py  typescript.py
src/otter_docs/render/: __init__.py  base.py  markers.py  renderers.py
src/otter_docs/resolvers/: __init__.py  base.py  go.py  lsp.py  python.py  typescript.py
tests/: conftest.py  test_agent.py  test_cli.py  test_clients.py  test_describe.py  test_detectors.py  test_embedding_detectors.py  test_enrich.py  test_eval.py  test_eval_codenet.py  test_go_resolver.py  test_llm_direct.py  test_lsp_client.py  test_models.py  test_neo4j_backend.py  test_onboarding.py  test_parsers.py  test_render.py  test_repo.py  test_resolvers.py  test_sqlite_backend.py  test_typescript_resolver.py
