[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otter-docs"
version = "0.1.0.dev0"
description = "Polyglot codebase inspection library for agent-driven development"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Braedon Long", email = "braedon@dreamtree.org" },
]
keywords = [
    "code-analysis",
    "static-analysis",
    "code-graph",
    "redundancy-detection",
    "agent",
    "llm",
    "polyglot",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.6",
    "sqlite-vec>=0.1.6",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-typescript>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "neo4j>=5.20",
    "jedi>=0.19",
]
neo4j = [
    "neo4j>=5.20",
]
python-resolver = [
    "jedi>=0.19",
]
# Convenience extra that pulls every optional resolver. Go and TS
# resolvers will land here as they're added.
all-resolvers = [
    "jedi>=0.19",
]

[project.urls]
Homepage = "https://github.com/blong-dev/otter-docs"
Repository = "https://github.com/blong-dev/otter-docs"
Issues = "https://github.com/blong-dev/otter-docs/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/otter_docs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
markers = [
    "integration: tests that need external services (e.g. live Neo4j); skipped by default",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]  # line length handled by formatter
